# Pharos

./: .build-trigger-v2  .build-trigger-v3  README.md
backend/: Dockerfile  app.py  breachelens.spec  build.bat  build.sh  pyproject.toml  run.bat  run.py  run.sh
backend/breachelens/: __init__.py  config.py  errors.py  identities.py  main.py  native_dialogs.py  state.py
backend/breachelens/api/: __init__.py  aggregations.py  audit.py  auth.py  health.py  indexing.py  maintenance.py  profiles.py  results.py  search.py  settings.py  sources.py  stats.py
backend/breachelens/db/: __init__.py  migrations.py  models.py
backend/breachelens/entities/: __init__.py  dedupe.py  detectors.py  endpoint_classifier.py  service_classifier.py  url_normalizer.py
backend/breachelens/index/: __init__.py  query.py
backend/breachelens/ingest/: __init__.py  csv_parser.py  format_detection.py  index_job.py  index_writer.py  parser.py  scanner.py  sql_dump.py  stealer_logs.py
backend/breachelens/security/: __init__.py  audit.py  auth.py  masking.py  rate_limit.py  validation.py
backend/breachelens/static/: app-core.js  app-pages.js  app.css  enhancements.js  index.html  (+3 more)
backend/migrations/: 001_init.sql  002_pharos_03.sql  003_remove_auth.sql  004_index_progress.sql
backend/tests/: test_classifiers.py  test_dedupe.py  test_detectors.py  test_format_detection.py  test_identities.py  test_index_job_integration.py  test_index_progress.py  test_masking.py  test_no_auth.py  test_scanner.py  test_search_modes.py  test_stealer_logs.py  test_url_normalizer.py  test_validation.py
(+33 files in other folders)
